--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.2.10",
     "idb": "^8.0.0",
     "immer": "^10.1.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
